examples/test/testpolicy4211.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4211
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key33: value35
      key30: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value20
      podSelector:
        matchLabels:
          key2: value41
          key8: value4
